Kubernetes/traefik-ingress/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik-ingress-controller
spec:
  controller: traefik.io/ingress-controller
