Kubernetes/traefik-ingress/traefik-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-routes
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  # Route for Traefik Dashboard
  - match: Host(`traefik.k8s.local`)
    kind: Rule
    services:
      - name: api@internal
        kind: TraefikService
    # Middleware auth for Traefik Dashboard
    middlewares:
      - name: traefik-auth
  # Route for Traefik Prometheus Metrics
  - match: Host(`traefik.k8s.local`) && PathPrefix(`/metrics`)
    kind: Rule
    services:
      - name: prometheus@internal
        kind: TraefikService
